--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,19 @@
   padding: 0;
 }
 
-body {
-  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+ body {
+  font-family: "Outfit", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  content: "";
+  background: url("./assets/sunset.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* z-index: -1; */
+} 
 
 p {
   font-size: 1.6rem;
@@ -30,16 +36,15 @@ h1 {
   color: #fff;
 }
 
-.app:before {
-  content: '';
-  background: url('./assets/sunset.jpg') no-repeat center center/cover;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
+/* .app:before {
+ content: '';
+  background: url('./assets/sunset.jpg') ;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index:-1;
+} */
 
 .app .search {
   text-align: center;
@@ -61,7 +66,7 @@ h1 {
 
 .container {
   max-width: 700px;
-  height: 700px;
+  /* height: 700px; */
   margin: auto;
   padding: 0 1rem;
   position: relative;
@@ -105,3 +110,15 @@ h1 {
 
 
 
+/* body {
+  font-family: "Outfit", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  content: "";
+  background: url("./assets/sunset.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+} */
